feat(config): 更新網站標題與描述
將網站的預設標題更改為「伴獸家 - 打造幸福日常」，以
符合品牌形象。同時更新 SEO 設定中的預設描述，增強
網站的搜尋引擎優化效果。

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ settings.site_name }}{% if settings.site_description %} - {{ settings.site_description }}{% endif %}{% endblock %}
+{% block title %}伴獸家 - 打造幸福日常{% endblock %}
 
 {% block description %}{{ settings.site_description }}{% endblock %}
 
